[package]
name = "siloka"
version = "0.1.0-alpha.0"
edition = "2024"
authors = ["Adhidarma Hadiwinoto <adhisimon@tektrans.id>"]
description = "Object storage with on the fly erasure coding and easy expansion"
license = "Apache-2.0"
repository = "https://github.com/adhisimon/siloka"
readme = "README.md"
keywords = ["object-storage", "s3", "erasure-coding", "distributed-systems"]
categories = ["filesystem", "network-programming"]

[package.metadata.release]
push = true
push-tags = true
sign-commit = true  # Opsional: jika Anda menggunakan GPG sign untuk commit

[dependencies]
clap = { version = "4.6.1", features = ["derive", "env"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sled = "0.34.7"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "net", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
